# genai-anomaly-service

./: .gitignore  README.md  pyproject.toml
anomaly/: __init__.py
anomaly/baselines/: __init__.py  interface.py  statistical.py
anomaly/config/: __init__.py  settings.py
anomaly/detectors/: __init__.py  cost_detector.py  interface.py  latency_detector.py  policy_detector.py  quality_detector.py  registry.py
anomaly/features/: __init__.py  llmops_reader.py
anomaly/models/: __init__.py  anomaly_record.py  baseline.py  input_data.py  trust_signal.py
anomaly/store/: __init__.py  file_store.py  interface.py  memory_store.py
app/: __init__.py  main.py
app/api/: __init__.py  health.py  routes.py
tests/: test_api.py  test_baselines.py  test_detectors.py  test_llmops_pull_only.py  test_store.py
